@@ -1,4 +1,5 @@
 0.05
+ - Update Module::Install to 1.21 version.
 
 0.04 2022-10-06T17:31:58+02:00
  - Add utilities for pager.
